src/objects/SPE_ScorecardTracker__c.object
<CustomObject>
    <fields>
        <fullName>DateOfExecution__c</fullName>
        <label>Date Of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScorecardGenerator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Generator</label>
        <referenceTo>SPE_ScorecardGenerator__c</referenceTo>
        <relationshipLabel>Scorecard Trackers</relationshipLabel>
        <relationshipName>Scorecard_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scorecard_Generator_Description__c</fullName>
        <formula>ScorecardGenerator__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scorecard Generator Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecard_Tracker_Id__c</fullName>
        <displayFormat>SCR Track-{00000}</displayFormat>
        <label>Scorecard Tracker Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tracker_Identifier__c</fullName>
        <label>Tracker Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Scorecard Tracker</label>
    <nameField>
        <label>Scorecard Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>